<resources>
    <string name="app_name">Novulis_dev_app_v0.1</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="novulis">Novulis</string>
    <string name="spaceship">Spaceship</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">Library</string>
    <string name="social">Social</string>
    <string name="log">Log</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currentgoal">Current goal screen element</string>
    <string name="current_goal">Current Goal</string>
    <string name="goalPlaceholder">Read 100 pages each week</string>
    <string name="change_ngoal">Change \nGoal</string>
    <string name="placeholder_book">Percy Jackson and the Lightning Thief</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="reading_time_logged">Reading\n Time Logged</string>
    <string name="pages_read">Pages Read</string>
    <string name="fuel">Fuel</string>
    <string name="placeholder_time">4h</string>
    <string name="placeholder_pages">60 \npgs</string>
    <string name="placeholder_fuel">50%</string>
    <string name="placeholder_fraction">60\n/100</string>
    <string name="read_again">Read Again</string>
    <string name="club_books">Club Books</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="author">Author</string>
    <string name="banner_placeholder_for_library">Banner placeholder for library</string>
    <string name="discover_more_books">Discover more Books</string>
    <string name="recommended_dune">Recommended: Dune</string>
    <string name="book_description">Book Description</string>
    <string name="todo">TODO</string>
    <string name="clubs">Clubs</string>
    <string name="forum">Forum</string>
    <string name="blue_circle">blue circle</string>
    <string name="pink_circle">pink circle</string>
    <string name="grey_background">grey background</string>
    <string name="inner_background">inner background</string>
    <string name="plus">segments of plus</string>
    <string name="planet">planets</string>
    <string name="planet_names">names of groups</string>
    <string name="star_background">star background</string>
    <string name="sun">sun</string>
    <string name="wet_planet">wet planet</string>
    <string name="title_activity_trinkets">TrinketsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>