<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".fragments.LibraryFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended_dune"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintEnd_toEndOf="@+id/imageView4"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    android:elevation="1dp"
                    app:layout_constraintVertical_bias="0.872" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/banner_placeholder_for_library"

                    android:foreground="@drawable/banner_overlay"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dune_banner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/discoverBtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="#383849"
                    android:text="@string/discover_more_books"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />
<!--                    android:textAlignment="viewEnd"--></androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/currently_reading"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currentlyReadingRV"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                tools:listitem="@layout/book_raw_item">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/club_books"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clubBooksRV"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                tools:listitem="@layout/book_raw_item">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/read_again"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/readAgainRV"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                tools:listitem="@layout/book_raw_item" />

        </LinearLayout>
    </ScrollView>

    <!--    <ScrollView-->
<!--        android:id="@+id/scrollView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="15dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--&lt;!&ndash;        <RelativeLayout&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:orientation="vertical">&ndash;&gt;-->

<!--&lt;!&ndash;        </RelativeLayout>&ndash;&gt;-->
<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>