<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00707070"
    android:backgroundTint="#00FFFFFF"
    android:contentDescription="@string/clubs"
    android:foregroundTint="#00FFFFFF"
    tools:context=".activities.ClubsActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#383849"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="237dp"
        android:contentDescription="@string/blue_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ellipse38"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="179dp"
        android:layout_height="161dp"
        android:clickable="false"
        android:contentDescription="@string/pink_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ellipse39"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:clickable="false"
        android:contentDescription="@string/grey_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/rectangle186"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="276dp"
        android:layout_height="111dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:contentDescription="@string/inner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/rectangle166"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/grey_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@drawable/rectangle165"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="285dp"
        android:layout_height="118dp"
        android:contentDescription="@string/inner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@drawable/rectangle166" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/grey_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle165"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="176dp"
        android:contentDescription="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView19"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line55"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line54"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="107dp"
        android:layout_height="117dp"
        android:contentDescription="@string/planet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201"
        app:srcCompat="@drawable/sun1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="66dp"
        android:layout_height="74dp"
        android:contentDescription="@string/planet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487"
        app:srcCompat="@drawable/wet_planet1" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="261dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:contentDescription="@string/planet_names"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:srcCompat="@drawable/team_rockets_bookclub"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="264dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/planet_names"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/bakis_bookclub"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/rocketBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="278dp" />

</androidx.constraintlayout.widget.ConstraintLayout>