<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookClubActivity">

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="698dp"
        android:layout_height="1049dp"
        android:contentDescription="@string/star_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookclub_background" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:contentDescription="@string/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun1" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="496dp"
        android:contentDescription="@string/wet_planet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wet_planet2" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="584dp"
        android:contentDescription="@string/wet_planet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/island_planet1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/wet_planet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gas_gaint1" />

    <ImageView
        android:id="@+id/harryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/wet_planet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wet_planet1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/book_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView22"
        app:srcCompat="@drawable/pj_lt" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/book_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/harryView"
        app:srcCompat="@drawable/hp_dh" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/book_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/eragon" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="136dp"
        android:contentDescription="@string/book_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView23"
        app:srcCompat="@drawable/ulysses" />

</androidx.constraintlayout.widget.ConstraintLayout>